feat: Update typography and layout consistency
- Add Anuphan font (500 weight) for page titles
- Add Nunito font as default for all body text
- Update page title font weight from 700 to 500 (medium)
- Remove border-right from sidebar navigation
- Remove border-bottom from all page headers
- Standardize header height (py-5) to match sidebar logo area
- Update design tokens and UI style guide documentation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <!-- Google Fonts - Anuphan for page titles, Nunito for body text -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@400;500;600;700&family=Nunito:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>pelico-supply-prototype</title>
   </head>
   <body>
